# ockham

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: consensus_flow.md
scripts/: test_cluster.sh  test_failure.sh
src/: client.rs  consensus.rs  crypto.rs  evidence_pool.rs  lib.rs  main.rs  network.rs  rpc.rs  state.rs  storage.rs  tx_pool.rs  types.rs  vm.rs
tests/: delayed_staking_test.rs  finalization_reorg.rs  finalize_test.rs  inject_tx.rs  liveness_test.rs  persistence_test.rs  rpc_test.rs  safety_test.rs  simulation.rs  slashing_test.rs  sync_test.rs  timeout_test.rs
