[package]
name = "ockham"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bincode = "1.3.3"
blst = "0.3.13"
env_logger = "0.11.8"
futures = "0.3.31"
hex = "0.4.3"
libp2p = { version = "0.56.0", features = ["gossipsub", "mdns", "noise", "tcp", "yamux", "tokio", "macros"] }
log = "0.4.29"
rand = "0.8.5"
redb = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread"] }
jsonrpsee = { version = "0.24.7", features = ["server", "macros", "http-client"] }
revm = { version = "3.0", features = ["std", "serde"] }
alloy-primitives = { version = "0.4", features = ["serde"] }
sparse-merkle-tree = "0.6"


